updated hover color and formatting

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <a href="https://wonky-grid.vercel.app/">wonky grid</span>
                 </div>
                 <div class="project-description">
-                    <p>a recreation of The Studio's award-winning 'wonky' grid slideshow effect</p>
+                    <p>a recreation of The Studio's award-winning 'wonky' grid slideshow effect.</p>
                     <p class="tech-stack">HTML • CSS Grid • JavaScript</p>
                 </div>
             </div>
@@ -91,7 +91,7 @@
                     <a href="https://hyperhi.vercel.app/">hyper-hi</span>
                 </div>
                 <div class="project-description">
-                    <p>An experimental canvas drawing project exploring blend modes and interactive elements.</p>
+                    <p>an experimental canvas drawing project exploring blend modes and interactive elements.</p>
                     <p class="tech-stack">HTML Canvas • JavaScript • DOM Events</p>
                 </div>
             </div>
