updated scrolling marquee to prevent it running out

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sam geyer</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌱</text></svg>">
     <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
@@ -101,15 +102,36 @@
     <!-- scrolling banner & contact info -->
     <div class="marquee">
         <div class="marquee-content">
-            <span>→ <a href="mailto:sam.geyer@hey.com">email</a></span>
-            <span>→ <a href="https://x.com/trashw0rm">twitter</a></span>
-            <span>→ <a href="https://github.com/yesworm">github</a></span>
-            <span>→ <a href="https://www.are.na/sam-favj5cn6c7k/channels">are.na</a></span>
-            <!-- duped for smooth infinite scroll -->
-            <span>→ <a href="mailto:sam.geyer@hey.com">email</a></span>
-            <span>→ <a href="https://x.com/trashw0rm">twitter</a></span>
-            <span>→ <a href="https://github.com/yesworm">github</a></span>
-            <span>→ <a href="https://www.are.na/sam-favj5cn6c7k/channels">are.na</a></span>
+            <div class="marquee-items">
+                <a href="mailto:sam.geyer@hey.com">→ EMAIL</a>
+                <a href="https://x.com/trashw0rm">→ TWITTER</a>
+                <a href="https://github.com/yesworm">→ GITHUB</a>
+                <a href="https://www.are.na/sam-favj5cn6c7k/channels">→ ARE.NA</a>
+            </div>
+            <div class="marquee-items">
+                <a href="mailto:sam.geyer@hey.com">→ EMAIL</a>
+                <a href="https://x.com/trashw0rm">→ TWITTER</a>
+                <a href="https://github.com/yesworm">→ GITHUB</a>
+                <a href="https://www.are.na/sam-favj5cn6c7k/channels">→ ARE.NA</a>
+            </div>
+            <div class="marquee-items">
+                <a href="mailto:sam.geyer@hey.com">→ EMAIL</a>
+                <a href="https://x.com/trashw0rm">→ TWITTER</a>
+                <a href="https://github.com/yesworm">→ GITHUB</a>
+                <a href="https://www.are.na/sam-favj5cn6c7k/channels">→ ARE.NA</a>
+            </div>
+            <div class="marquee-items">
+                <a href="mailto:sam.geyer@hey.com">→ EMAIL</a>
+                <a href="https://x.com/trashw0rm">→ TWITTER</a>
+                <a href="https://github.com/yesworm">→ GITHUB</a>
+                <a href="https://www.are.na/sam-favj5cn6c7k/channels">→ ARE.NA</a>
+            </div>
+            <div class="marquee-items">
+                <a href="mailto:sam.geyer@hey.com">→ EMAIL</a>
+                <a href="https://x.com/trashw0rm">→ TWITTER</a>
+                <a href="https://github.com/yesworm">→ GITHUB</a>
+                <a href="https://www.are.na/sam-favj5cn6c7k/channels">→ ARE.NA</a>
+            </div>
         </div>
     </div>
 
