updated meta tags for sharing & search results

--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sam geyer</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌱</text></svg>">
+     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+     
+     <!-- Meta Tags -->
+     <title>Sam Geyer | Creative Developer</title>
+     <meta name="description" content="Full Stack Developer | JavaScript, React, Node.js | Check out my latest projects here.">
+     
+     <!-- open graph meta tags (for social sharing) -->
+     <meta property="og:title" content="Sam Geyer | Full Stack Developer">
+     <meta property="og:description" content="Developing creative web solutions and documenting my journey from aspiring to professional developer. Check out my latest projects and learning progress.">
+     <meta property="og:url" content="https://www.samgeyer.com">
+     <meta property="og:type" content="website">
+ 
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🌱</text></svg>">
     <link href="style.css" rel="stylesheet"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
