updated email links

--- a/index.html
+++ b/index.html
@@ -120,31 +120,31 @@
     <div class="marquee">
         <div class="marquee-content">
             <div class="marquee-items">
-                <a href="mailto:sam.geyer@hey.com">→ EMAIL</a>
+                <a href="mailto:geyerwork@gmail.com">→ EMAIL</a>
                 <a href="https://x.com/trashw0rm">→ TWITTER</a>
                 <a href="https://github.com/yesworm">→ GITHUB</a>
                 <a href="https://www.are.na/sam-favj5cn6c7k/channels">→ ARE.NA</a>
             </div>
             <div class="marquee-items">
-                <a href="mailto:sam.geyer@hey.com">→ EMAIL</a>
+                <a href="mailto:geyerwork@gmail.com">→ EMAIL</a>
                 <a href="https://x.com/trashw0rm">→ TWITTER</a>
                 <a href="https://github.com/yesworm">→ GITHUB</a>
                 <a href="https://www.are.na/sam-favj5cn6c7k/channels">→ ARE.NA</a>
             </div>
             <div class="marquee-items">
-                <a href="mailto:sam.geyer@hey.com">→ EMAIL</a>
+                <a href="mailto:geyerwork@gmail.com">→ EMAIL</a>
                 <a href="https://x.com/trashw0rm">→ TWITTER</a>
                 <a href="https://github.com/yesworm">→ GITHUB</a>
                 <a href="https://www.are.na/sam-favj5cn6c7k/channels">→ ARE.NA</a>
             </div>
             <div class="marquee-items">
-                <a href="mailto:sam.geyer@hey.com">→ EMAIL</a>
+                <a href="mailto:geyerwork@gmail.com">→ EMAIL</a>
                 <a href="https://x.com/trashw0rm">→ TWITTER</a>
                 <a href="https://github.com/yesworm">→ GITHUB</a>
                 <a href="https://www.are.na/sam-favj5cn6c7k/channels">→ ARE.NA</a>
             </div>
             <div class="marquee-items">
-                <a href="mailto:sam.geyer@hey.com">→ EMAIL</a>
+                <a href="mailto:geyerwork@gmail.com">→ EMAIL</a>
                 <a href="https://x.com/trashw0rm">→ TWITTER</a>
                 <a href="https://github.com/yesworm">→ GITHUB</a>
                 <a href="https://www.are.na/sam-favj5cn6c7k/channels">→ ARE.NA</a>
