updated project info with WIP project brutify

--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
             <div class="project-item">
                 <div class="project-title">
                     <span class="arrow">→</span>
+                    <a href="">brutify (WIP)</span>
+                </div>
+                <div class="project-description">
+                    <p>a minimalist spotify client emphasizing brutalist design principles and visual aesthetics.</p>
+                    <p class="tech-stack">React • Typescript • OAuth • Spotify API</p>
+                </div>
+            </div>
+
+            <div class="project-item">
+                <div class="project-title">
+                    <span class="arrow">→</span>
                     <a href="https://wonky-grid.vercel.app/">wonky grid</span>
                 </div>
                 <div class="project-description">
