update project listing

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <a href="">brutify (WIP)</span>
                 </div>
                 <div class="project-description">
-                    <p>a minimalist spotify client emphasizing brutalist design principles and visual aesthetics.</p>
+                    <p>a minimalist spotify client emphasising brutalist design principles.</p>
                     <p class="tech-stack">React • Typescript • OAuth • Spotify API</p>
                 </div>
             </div>
