updated project list and links

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="project-item">
                 <div class="project-title">
                     <span class="arrow">→</span>
-                    <a href="">brutify (WIP)</span>
+                    <a href="https://brutify.online">brutify</span>
                 </div>
                 <div class="project-description">
                     <p>a minimalist spotify client emphasising brutalist design principles.</p>
