updated homepage with some small tweaks on language and project descriptions

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      
      <!-- open graph meta tags (for social sharing) -->
      <meta property="og:title" content="Sam Geyer | Full Stack Developer">
-     <meta property="og:description" content="Developing creative web solutions and documenting my journey from aspiring to professional developer. Check out my latest projects and learning progress.">
+     <meta property="og:description" content="Independent front-end developer building modern, expressive websites using JavaScript, React, and Shopify.">
      <meta property="og:url" content="https://www.samgeyer.com">
      <meta property="og:type" content="website">
  
@@ -75,11 +75,11 @@
         <div id="head-model"></div>
     </div>
 
-    <p class="intro">aspiring developer, learning via boot.dev, the odin project & superhi.</p>
+    <p class="intro">freelance front-end dev with a creative eye, building fast, expressive websites using modern JS.</p>
 
     <!-- projects List -->
     <section class="projects">
-        <h2>current projects in my learning journey ↓</h2>
+        <h2>recent work & experiments ↓</h2>
         
         <div class="project-list">
             <div class="project-item">
@@ -88,7 +88,7 @@
                     <a href="https://brutify.online">brutify</span>
                 </div>
                 <div class="project-description">
-                    <p>a minimalist spotify client emphasising brutalist design principles.</p>
+                    <p>a Spotify-integrated music browser built from scratch — handles token refresh, custom state, and animated UI.</p>
                     <p class="tech-stack">React • Typescript • OAuth • Spotify API</p>
                 </div>
             </div>
